// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AppComponent /> component Render snapshot - isLogged: false 1`] = `
<BrowserRouter>
  <Adapter
    className="page"
  >
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
        exact={true}
        path="/mylists"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
        exact={true}
        path="/watchlist"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
        exact={true}
        path="/favorites"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
        exact={true}
        path="/movie/:id"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
        exact={true}
        path="/list/:id"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
      />
    </Switch>
  </Adapter>
</BrowserRouter>
`;

exports[`<AppComponent /> component Render snapshot - isLogged: true 1`] = `
<BrowserRouter>
  <Connect(HeaderContainer) />
  <Adapter
    className="page"
  >
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        path="/"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
        exact={true}
        path="/mylists"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
        exact={true}
        path="/watchlist"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
        exact={true}
        path="/favorites"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
        exact={true}
        path="/movie/:id"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
        exact={true}
        path="/list/:id"
      />
      <withRouter(Connect(PrivateRouteComponent))
        component={[Function]}
      />
    </Switch>
  </Adapter>
</BrowserRouter>
`;
